Final site with repairs v1.0
Let me know if you find any problems with the site, especially the repairs part.

--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -23,7 +23,7 @@
 
     <main>
         <div class="main-form">
-            <form>
+            <form action="view_customer.html">
                 <fieldset>
                     <legend>Customer Information</legend>
                     <div class="col">
