--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -23,7 +23,7 @@
 
     <main>
         <div class="main-form">
-            <form>
+            <form action="view_equipment.html">
                 <fieldset>
                     <legend>[Customer Name]:Equipment Information</legend>
                     <div>
@@ -48,7 +48,7 @@
                         <div class="col">
                             <div class="txtDesc">
                                 <label for="description"><b>Description:</b></label>
-                                <textarea id="description"></textarea>
+                                <textarea class="description" id="description"></textarea>
                             </div>
                         </div>
                         <hr>
