--- a/Prototype-main/sign-in.html
+++ b/Prototype-main/sign-in.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
-    <title>Web Crafters</title>
+    <title>Sign in Page</title>
 </head>
 
 <body>
