--- a/Prototype-main/type.html
+++ b/Prototype-main/type.html
@@ -14,7 +14,7 @@
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
-    <title>Type Maintanance</title>
+    <title>Engine Type Maintanance</title>
 </head>
 
 <body>
