--- a/Prototype-main/view_equipment.html
+++ b/Prototype-main/view_equipment.html
@@ -25,7 +25,7 @@
 
         <h1 class="sc">Search Equipment</h1>
         <div class="search-container">
-            <input id="search-input" type="text" list="equipment" required>
+            <input id="search-input" type="text" list="equipment-list" required>
             <label id="placeholder-label" for="search-input">Search for equipment Ex: Kohler Engine</label>
             <datalist id="equipment-list"></datalist>
             <button id="search-button" class="Sbtn">Search</button>
