--- a/Prototype-main/view_repairs.html
+++ b/Prototype-main/view_repairs.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
-    <title>Customer Search</title>
+    <title>Repairs</title>
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
