site after presentation 3
this version of the site had a few tweaks from the presentation 3 notes, but still needs a bit of a redesign. The plan is to add a report details and report preview page for the three reports included in the data model.

--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -23,7 +23,7 @@
 
     <main>
         <div class="main-form">
-            <form action="view_equipment.html">
+            <form action="edit.html#equipment">
                 <fieldset>
                     <legend>[Customer Name]:Equipment Information</legend>
                     <div>
@@ -119,7 +119,7 @@
             "<p>Pressing the 'Clear' button will reset the form to before any information was entered.</p>",
             "<p>Pressing the 'Back' button will take you back to the previous page.</p>",
             "<p>Pressing any of the 'plus' icons next to the dropdowns will take you to the maintenance page for that dropdown list.</p>",
-        ])
+        ]);
     </script>
 </body>
 
