--- a/Prototype-main/repair-request.html
+++ b/Prototype-main/repair-request.html
@@ -46,7 +46,7 @@
 
                         <div>
 
-                            <label for="equipments"><b>Equipments:</b></label>
+                            <label for="equipments"><b>Equipment:</b></label>
                             <select id="equipments" name="create" required>
                                 <option value="">Select equipment...</option>
                             </select>
