--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -15,6 +15,7 @@
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
+    <script src="JS/generate-data.js"></script>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 
     <main>
         <div class="main-form">
-            <form action="view_customer.html">
+            <form action="view_equipment.html">
                 <fieldset>
                     <legend>Customer Information</legend>
                     <div class="col">
@@ -31,7 +32,6 @@
                             <label for="fName"><b>First Name:</b></label>
                             <input id="fName" name="create" type="text" placeholder="Ex: John" required>
                         </div>
-
                         <div>
                             <label for="lName"><b>Last Name:</b></label>
                             <input id="lName" name="create" type="text" placeholder="Ex: Doe" required>
@@ -54,31 +54,20 @@
                     <div class="col">
                         <div>
                             <label for="city"><b>City:</b></label>
-                            <select id="city" name="create" required>
+                            <select id="city" required>
                                 <option value="">Select a city...</option>
                             </select>
                             <a href="city.html"><i class="fa-solid fa-plus"></i></a>
                         </div>
                         <div>
                             <label for="province"><b>Province:</b></label>
-                            <select id="province" name="create" required>
+                            <select id="province" required>
                                 <option value="">Select a province...</option>
                             </select>
                             <a href="province.html"><i class="fa-solid fa-plus"></i></a>
                         </div>
                     </div>
-                    <div class="col">
-                        <div>
-                            <label for="type"><b>Type:</b></label>
-                            <select id="type" name="create" required>
-                                <option value="">Select a type...</option>
-                            </select>
-                            <a href="type.html"><i class="fa-solid fa-plus"></i></a>
-                        </div>
-                        <div>
 
-                        </div>
-                    </div>
                     <hr>
                     <div class="col">
                         <div>
@@ -106,6 +95,11 @@
                             <span>Clear</span>
                         </button>
                     </div>
+                    <div class="btn btn-small">
+                        <button onclick="GenerateData('create', ['n','h','n@h.com','123 St.', '2195552368', 'A1B2C3']);" type="button">
+                            <span>Fill Form</span>
+                        </button>
+                    </div>
                 </fieldset>
             </form>
         </div>
@@ -130,7 +124,7 @@
             "<p>Pressing the 'Clear' button will reset the form to before any information was entered.</p>",
             "<p>Pressing the 'Back' button will take you back to the previous page.</p>",
             "<p>Pressing any of the 'plus' icons next to the dropdowns will take you to the maintenance page for that dropdown list.</p>",
-        ])
+        ]);
     </script>
 </body>
 
