--- a/Prototype-main/edit.html
+++ b/Prototype-main/edit.html
@@ -30,13 +30,13 @@
                     <div class="col">
                         <div>
                             <label for="fName"><b>First Name:</b></label>
-                            <input id="fName" autocomplete="on" name="create" type="text" placeholder="Ex: John"
+                            <input id="fName" autocomplete="on" name="customer" type="text" placeholder="Ex: John"
                                 required>
                         </div>
 
                         <div>
                             <label for="lName"><b>Last Name:</b></label>
-                            <input id="lName" autocomplete="on" name="create" type="text" placeholder="Ex: Doe"
+                            <input id="lName" autocomplete="on" name="customer" type="text" placeholder="Ex: Doe"
                                 required>
                         </div>
                     </div>
@@ -44,13 +44,13 @@
                     <div class="col">
                         <div>
                             <label for="email"><b>Email:</b></label>
-                            <input id="email" autocomplete="on" name="create" type="email"
+                            <input id="email" autocomplete="on" name="customer" type="email"
                                 placeholder="Ex: JohnDoe123@gmail.com" required>
                         </div>
 
                         <div>
                             <label for="address"><b>Address:</b></label>
-                            <input id="address" autocomplete="on" name="create" type="text"
+                            <input id="address" autocomplete="on" name="customer" type="text"
                                 placeholder="Ex: 123 Fake Street" required>
                         </div>
                     </div>
@@ -58,14 +58,14 @@
                     <div class="col">
                         <div>
                             <label for="city"><b>City:</b></label>
-                            <select id="city" name="create" required>
+                            <select id="city" required>
                                 <option value="">Select a city...</option>
                             </select>
                             <a href="city.html"><i class="fa-solid fa-plus"></i></a>
                         </div>
                         <div>
                             <label for="province"><b>Province:</b></label>
-                            <select id="province" name="create" required>
+                            <select id="province" required>
                                 <option value="">Select a province...</option>
                             </select>
                             <a href="province.html"><i class="fa-solid fa-plus"></i></a>
@@ -87,12 +87,12 @@
                     <div class="col">
                         <div>
                             <label for="phone"><b>Phone Number:</b></label>
-                            <input id="phone" autocomplete="on" name="create" type="tel" placeholder="Ex: 1234567890"
+                            <input id="phone" autocomplete="on" name="customer" type="tel" placeholder="Ex: 1234567890"
                                 required>
                         </div>
                         <div>
                             <label for="postal"><b>Postal Code:</b></label>
-                            <input id="postal" autocomplete="on" name="create" type="text" placeholder="Ex: A1B2C3"
+                            <input id="postal" autocomplete="on" name="customer" type="text" placeholder="Ex: A1B2C3"
                                 required>
                         </div>
                     </div>
@@ -125,25 +125,25 @@
                             <div class="col">
                                 <div>
                                     <label for="Name"><b>Name:</b></label>
-                                    <input id="Name" name="create" type="text" placeholder="Ex: TimeMaster" required>
+                                    <input id="Name" name="create" name="equipment" type="text" placeholder="Ex: TimeMaster" required>
                                 </div>
 
                                 <div>
                                     <label for="Model"><b>Model:</b></label>
-                                    <input id="Model" name="create" type="text" placeholder="Ex: Kohler" required>
+                                    <input id="Model" name="create" name="equipment" type="text" placeholder="Ex: Kohler" required>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="vin">
                                     <label for="vin"><b>VIN:</b></label>
-                                    <input id="vin" name="create" type="number" placeholder="Ex: 76484443" required>
+                                    <input id="vin" name="create" name="equipment" type="number" placeholder="Ex: 76484443" required>
                                 </div>
                             </div>
                             <hr>
                             <div class="col">
                                 <div class="txtDesc">
                                     <label for="description"><b>Description:</b></label>
-                                    <textarea class="description" id="description"></textarea>
+                                    <textarea class="description" name="equipment" id="description"></textarea>
                                 </div>
                             </div>
                             <hr>
