Site after warranty report
This version of the site has a blank template for how the report pages should look. Please use the 'customreport-details' and  'customreport-preview' templates to create the report pages you are in charge of. Any other changes to the site should be listed in the commit comments.

--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -96,7 +96,7 @@
                         </button>
                     </div>
                     <div class="btn btn-small">
-                        <button onclick="GenerateData('create', ['n','h','n@h.com','123 St.', '2195552368', 'A1B2C3']);" type="button">
+                        <button onclick="GenerateData('create', ['Donut','Sprinkles','donutsprinkles@gmail.com','123 flavour St.', '2195552368', 'A1B2C3']);" type="button">
                             <span>Fill Form</span>
                         </button>
                     </div>
