--- a/Prototype-main/repair-details.html
+++ b/Prototype-main/repair-details.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="btn">
                         <button>
-                            <span>End Repair</span>
+                            <span>Save Repair</span>
                         </button>
                     </div>
                     <div class="btn btn-small">
