--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -15,6 +15,7 @@
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
+    <script src="JS/generate-data.js"></script>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 
     <main>
         <div class="main-form">
-            <form action="edit.html#equipment">
+            <form action="repair-request.html">
                 <fieldset>
                     <legend>[Customer Name]:Equipment Information</legend>
                     <div>
@@ -55,14 +56,14 @@
                         <div class="col">
                             <div>
                                 <label for="manufacturer"><b>Manufacturer:</b></label>
-                                <select id="manufacturer" name="create" required>
+                                <select id="manufacturer" required>
                                     <option value="">Select a manufacturer...</option>
                                 </select>
                                 <a href="manufacturer.html"><i class="fa-solid fa-plus"></i></a>
                             </div>
                             <div>
                                 <label for="type"><b>Type:</b></label>
-                                <select id="type" name="create" required>
+                                <select id="type" required>
                                     <option value="">Select a type...</option>
                                 </select>
                                 <a href="type.html"><i class="fa-solid fa-plus"></i></a>
@@ -71,7 +72,7 @@
                         <div class="col">
                             <div>
                                 <label for="color"><b>Color:</b></label>
-                                <select id="color" name="create" required>
+                                <select id="color" required>
                                     <option value="">Select a color...</option>
                                 </select>
                                 <a href="color.html"><i class="fa-solid fa-plus"></i></a>
@@ -95,6 +96,11 @@
                             <span>Clear</span>
                         </button>
                     </div>
+                    <div class="btn btn-small">
+                        <button onclick="GenerateData('create', ['Kohler Engine 5400 Series','5400 Series KS595','8472947282']);" type="button">
+                            <span>Fill Form</span>
+                        </button>
+                    </div>
                 </fieldset>
             </form>
         </div>
@@ -105,10 +111,10 @@
     <script>
         //Page specific code
         let manufacturers = document.getElementById("manufacturer");
-        let types = document.getElementById("type");
-        let colors = document.getElementById("color");
         PopulateDropdown(manufacturers, ManufacturerTable);
+        let types = document.getElementById("type");
         PopulateDropdown(types, TypeTable);
+        let colors = document.getElementById("color");
         PopulateDropdown(colors, ColourTable);
     </script>
     <script src="JS/header-template.js"></script>
