Site with context help
Added context help, and changed various things like links, JavaScript etc. Repair List now has a status column as well

--- a/Prototype-main/customreport-details.html
+++ b/Prototype-main/customreport-details.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="main-form">
-            <form action="warranty-preview.html">
+            <form action="customreport-preview.html">
                 <fieldset>
                     <legend>Custom Report Details</legend>
                     <div class="col">
