--- a/Prototype-main/index.html
+++ b/Prototype-main/index.html
@@ -48,6 +48,7 @@
     <script src="JS/context-help.js"></script>
     <script>
         GenerateContextHelp(["<p>This is the homepage help icon. Each page contains a help icon that provides contextual help for that page</p>",
+            "<p>You can access help icon via a click, pressing enter, or pressing alt + h.</p>",
             "<p>You can sign in by pressing the 'sign in' icon at the top right of the page</p>",
             "<p>The navigation bar's 'Customers' tab will let you add customers, or search for existing ones.</p>",
             "<p>The navigation bar's 'Repair' tab will let you create a repair request, or see the list of existing repair requests.</p>",
