--- a/Prototype-main/warranty-details.html
+++ b/Prototype-main/warranty-details.html
@@ -51,8 +51,8 @@
                     <hr>
                     <div class="col">
                         <div>
-                            <label for="chkOnGoing" style="display: inline-block; margin: auto;"><b>Display Parts used:</b></label>
-                            <input id="chkOnGoing" type="checkbox" class="chk-finalize" checked>
+                            <label for="chkParts" style="display: inline-block; margin: auto;"><b>Display Parts used:</b></label>
+                            <input id="chkParts" type="checkbox" class="chk-finalize" checked>
                         </div>
                         <div>
                             <label for="chkGraph" style="display: inline-block; margin: auto;"><b>Generate
