--- a/Prototype-main/warranty-preview.html
+++ b/Prototype-main/warranty-preview.html
@@ -113,8 +113,14 @@
                 }]
             },
             options: {
-                legend: { display: false }
+                legend: { display: false },
+                title: {
+                text: "Monthly Warranty Revenue",
+                display: true,
+                position: "top",
+                fontSize: 25
             }
+            },
         });
 
     </script>
