--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -24,58 +24,94 @@
 
     <main>
         <div class="main-form">
-            <form action="view_equipment.html">
+            <form action="create_equipment.html">
                 <fieldset>
                     <legend>Customer Information</legend>
                     <div class="col">
                         <div>
-                            <label for="fName"><b>First Name:</b></label>
+                            <span style="display: flex;">
+                                <i class='far fa-question-circle'
+                                    title="Enter the customer's first name (personal name used before family name)"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="fName"><b>First Name:</b></label>
+                            </span>
                             <input id="fName" name="create" type="text" placeholder="Ex: John" required>
                         </div>
                         <div>
-                            <label for="lName"><b>Last Name:</b></label>
+                            <span style="display: flex;">
+                                <i class='far fa-question-circle'
+                                    title="Enter the customer's last name (family name, also known as a surname)"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="lName"><b>Last Name:</b></label>
+                            </span>
                             <input id="lName" name="create" type="text" placeholder="Ex: Doe" required>
                         </div>
                     </div>
                     <hr>
                     <div class="col">
                         <div>
-                            <label for="email"><b>Email:</b></label>
+                            <span style="display: flex;">
+                                <i class='far fa-question-circle' title="Enter the customer's email address"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="email"><b>Email:</b></label>
+                            </span>
                             <input id="email" name="create" type="email" placeholder="Ex: JohnDoe123@gmail.com"
                                 required>
                         </div>
 
                         <div>
-                            <label for="address"><b>Address:</b></label>
+                            <span style="display: flex;">
+                                <i class='far fa-question-circle' title="Enter the customer's street address"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="address"><b>Address:</b></label>
+                            </span>
                             <input id="address" name="create" type="text" placeholder="Ex: 123 Fake Street" required>
                         </div>
                     </div>
                     <hr>
                     <div class="col">
                         <div>
-                            <label for="city"><b>City:</b></label>
+                            <span style="display: flex;">
+                                <i class='far fa-question-circle'
+                                    title="Select the customer's city, click the 'plus' button to add a new city"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="city"><b>City:</b></label>
+                            </span>
                             <select id="city" required>
                                 <option value="">Select a city...</option>
                             </select>
                             <a href="city.html"><i class="fa-solid fa-plus"></i></a>
                         </div>
                         <div>
-                            <label for="province"><b>Province:</b></label>
+                            <span style="display: flex;">
+                                <i class='far fa-question-circle'
+                                    title="Select the customer's province, click the 'plus' button to add a new province/state"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="province"><b>Province:</b></label>
+                            </span>
                             <select id="province" required>
                                 <option value="">Select a province...</option>
                             </select>
                             <a href="province.html"><i class="fa-solid fa-plus"></i></a>
                         </div>
                     </div>
-
                     <hr>
                     <div class="col">
                         <div>
-                            <label for="phone"><b>Phone Number:</b></label>
+                            <span style="display: flex;">
+                                <i class='far fa-question-circle'
+                                    title="Enter the customer's phone number as 10 numeric digits, with no spaces or formatting"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="phone"><b>Phone Number:</b></label>
+                            </span>
                             <input id="phone" name="create" type="tel" placeholder="Ex: 1234567890" required>
                         </div>
-                        <div>
-                            <label for="postal"><b>Postal Code:</b></label>
+                        <div> <span style="display: flex;">
+                                <i class='far fa-question-circle'
+                                    title="Enter the customer's postal code, with no spaces or formatting"
+                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                <label for="postal"><b>Postal Code:</b></label>
+                            </span>
                             <input id="postal" name="create" type="text" placeholder="Ex: A1B2C3" required>
                         </div>
                     </div>
@@ -96,7 +132,9 @@
                         </button>
                     </div>
                     <div class="btn btn-small">
-                        <button onclick="GenerateData('create', ['Donut','Sprinkles','donutsprinkles@gmail.com','123 flavour St.', '2195552368', 'A1B2C3']);" type="button">
+                        <button
+                            onclick="GenerateData('create', ['Donut','Sprinkles','donutsprinkles@gmail.com','123 flavour St.', '2195552368', 'A1B2C3']);"
+                            type="button">
                             <span>Fill Form</span>
                         </button>
                     </div>
