--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -30,39 +30,67 @@
                     <div>
                         <div class="col">
                             <div>
-                                <label for="Name"><b>Name:</b></label>
+                                <span style="display: flex;">
+                                    <i class='far fa-question-circle' title="Enter the equipment's name"
+                                        style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                    <label for="Name"><b>Name:</b></label>
+                                </span>
                                 <input id="Name" name="create" type="text" placeholder="Ex: TimeMaster" required>
                             </div>
 
                             <div>
-                                <label for="Model"><b>Model:</b></label>
+                                <span style="display: flex;">
+                                    <i class='far fa-question-circle'
+                                        title="Enter the equipment's model (be as specific as possible)"
+                                        style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                    <label for="Model"><b>Model:</b></label>
+                                </span>
                                 <input id="Model" name="create" type="text" placeholder="Ex: Kohler" required>
                             </div>
                         </div>
                         <div class="col">
                             <div class="vin">
-                                <label for="vin"><b>VIN:</b></label>
+                                <span style="display: flex;">
+                                    <i class='far fa-question-circle'
+                                        title="Enter the equipment's VIN (Vehicle Identification Number, or Serial Number)"
+                                        style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                    <label for="vin"><b>VIN:</b></label>
+                                </span>
                                 <input id="vin" name="create" type="number" placeholder="Ex: 76484443" required>
                             </div>
                         </div>
                         <hr>
                         <div class="col">
                             <div class="txtDesc">
-                                <label for="description"><b>Description:</b></label>
+                                <span style="display: flex;">
+                                    <i class='far fa-question-circle' title="Enter a description of the equipment"
+                                        style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                    <label for="description"><b>Description:</b></label>
+                                </span>
                                 <textarea class="description" id="description"></textarea>
                             </div>
                         </div>
                         <hr>
                         <div class="col">
                             <div>
-                                <label for="manufacturer"><b>Manufacturer:</b></label>
+                                <span style="display: flex;">
+                                    <i class='far fa-question-circle'
+                                        title="Select the equipment's manufacturer, click the 'plus' button to add a new manufacturer"
+                                        style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                    <label for="manufacturer"><b>Manufacturer:</b></label>
+                                </span>
                                 <select id="manufacturer" required>
                                     <option value="">Select a manufacturer...</option>
                                 </select>
                                 <a href="manufacturer.html"><i class="fa-solid fa-plus"></i></a>
                             </div>
                             <div>
-                                <label for="type"><b>Type:</b></label>
+                                <span style="display: flex;">
+                                    <i class='far fa-question-circle'
+                                        title="Select the type of the equipment, click the 'plus' button to add a new equipment type"
+                                        style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                    <label for="type"><b>Type:</b></label>
+                                </span>
                                 <select id="type" required>
                                     <option value="">Select a type...</option>
                                 </select>
@@ -71,7 +99,12 @@
                         </div>
                         <div class="col">
                             <div>
-                                <label for="color"><b>Color:</b></label>
+                                <span style="display: flex;">
+                                    <i class='far fa-question-circle'
+                                        title="Select the equipment's color, click the 'plus' button to add a new color"
+                                        style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                                    <label for="color"><b>Color:</b></label>
+                                </span>
                                 <select id="color" required>
                                     <option value="">Select a color...</option>
                                 </select>
@@ -97,7 +130,9 @@
                         </button>
                     </div>
                     <div class="btn btn-small">
-                        <button onclick="GenerateData('create', ['Kohler Engine 5400 Series','5400 Series KS595','8472947282']);" type="button">
+                        <button
+                            onclick="GenerateData('create', ['Kohler Engine 5400 Series','5400 Series KS595','8472947282']);"
+                            type="button">
                             <span>Fill Form</span>
                         </button>
                     </div>
