--- a/Prototype-main/customer-feedback-report-preview.html
+++ b/Prototype-main/customer-feedback-report-preview.html
@@ -27,51 +27,45 @@
     </header>
     <main>
         <div class="preview-page">
-            <h1 style="display: inline-block; margin: 25px 10px;">Waranty Report: <br> Nov 15th, 2023 - Dec 15th, 2023
+            <h1 style="display: inline-block; margin: 25px 10px;">Customer Feedback Report: <br> Nov 15th, 2023 - Dec 15th, 2023
             </h1>
             <img src="images/FixIt.png" alt="FixIt Logo" id="fixlogo" style="width: 150px; float: right;">
+
             <table class="warranty-table">
                 <tbody>
                     <tr>
-                        <th style="width: 100px;">Manufacturer</th>
-                        <th>Repair Cost</th>
-                        <th style="width: 180px;">Parts used</th>
-                        <th style="width: 100px;">Repair Time</th>
-                        <th>Date Repaired</th>
-                        <th style="width: 300px;">Repair Description</th>
-                        <th></th>
+                        <th style="width: 100px;">Star rating</th>
+                        <th style="width: 300px;">Customer review</th>
+                        <th style="width: 170px;">Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
                     </tr>
                     <tr>
-                        <td>Kohler</td>
-                        <td>$142.98</td>
-                        <td>sparkplug &#215;2<br>master break cylinder &#215;1</td>
-                        <td>3.1 Hours</td>
-                        <td>Nov 22rd, 2023</td>
-                        <td>Changed sparkplugs and replaced master break cylinder</td>
+                        <td>3.5</td>
+                        <td>decent service, but very slow</td>
+                        <td>Nadav Hilu</td>
+                        <td>nhilu1@ncstudents.niagaracollege.ca</td>
+                        <td>(219) 555-2368</td>
                     </tr>
                     <tr>
-                        <td>Kohler</td>
-                        <td>$98.98</td>
-                        <td>piston &#215;4</td>
-                        <td>1.3 Hours</td>
-                        <td>Nov 25rd, 2023</td>
-                        <td>Ordered Kohler pistons and replaced four piston in the engines</td>
+                        <td>4</td>
+                        <td>the person who helped me was really nice, would come again!</td>
+                        <td>Donut</td>
+                        <td>donut@gmail.com</td>
+                        <td>(350) 030-7926</td>
+                    <tr>
+                        <td>5</td>
+                        <td>great service! 5/5</td>
+                        <td>Melody Ritter</td>
+                        <td>melodyritter@music.rthm</td>
+                        <td>(444) 341-7352</td>
                     </tr>
                     <tr>
-                        <td>Kohler</td>
-                        <td>$342.49</td>
-                        <td>flywheel &#215;1<br>carburetor &#215;1<br>timing belt &#215;1</td>
-                        <td>2.6 Hours</td>
-                        <td>Dec 2nd, 2023</td>
-                        <td>Replaced and tightened timing belt. Replaced carburetor and flywheel</td>
-                    </tr>
-                    <tr>
-                        <td>Kohler</td>
-                        <td>$192.49</td>
-                        <td> Engine block &#215;1<br></td>
-                        <td>0.8 Hours</td>
-                        <td>Dec 9th, 2023</td>
-                        <td>dismantled engine and replaced engine block</td>
+                        <td>3.5</td>
+                        <td>not impressed by the speed of repairs, but still a good service all around</td>
+                        <td>William Deir</td>
+                        <td>billdeir@construction.com</td>
+                        <td>(800) 135-5237</td>
                     </tr>
                 </tbody>
             </table>
@@ -79,15 +73,13 @@
             <hr>
             <h2 style="margin-left: 30px;">Report Details</h2>
             <div class="col" style="text-align: center;">
-                <h3>Total Repair Cost: <u>$776.94</u></h3>
-                <h3>Total Time Spent On Repairs: <u>8 Hours</u></h3>
-                <h3>Average Repair Cost: <u>$194.23</u></h3>
-                <h3>Number of Manufacturers Included: <u>1</u></h3>
-                <h3>Highest Repair Cost: <u>$342.49</u></h3>
+                <h3>Average star rating: <u>4</u></h3>
+                <h3>Number of reviews: <u>4</u></h3>
+                <h3>Best service: <u>Customer service</u></h3>
+                <h3>Service to improve: <u>Repair service</u></h3>
             </div>
+
             <hr style="position: absolute; width: 97%; bottom: 140px;">
-            
-            <p style="position: absolute; bottom: 75px; left: 20px; font-size: 24px;">Corresponding Companies: <u>Kohler</u></p>
             <p style="position: absolute; bottom: 20px; left: 20px; font-size: 24px;">Report run by: <u>Emily Rosten</u></p>
             <p style="position: absolute; bottom: 20px; left: 420px; font-size: 24px;">Run On: <u>Dec 15th, 2023</u></p>
             <p style="position: absolute; bottom: 20px; right: 40px;">1/1</p>
@@ -102,5 +94,4 @@
         GenerateContextHelp(["<p>The report preview page allows you to see a preview of the chosen report.</p>"])
     </script>
 </body>
-
 </html>
